objects/Business_Activity_List__c.object
<CustomObject>
    <fields>
        <fullName>A_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A Number</label>
        <referenceTo>SalesPipeline__c</referenceTo>
        <relationshipLabel>Business Activity List</relationshipLabel>
        <relationshipName>Business_Activity_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ag__c</fullName>
        <label>Ag</label>
        <picklist>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_chack__c</fullName>
        <formula>if ( Tokyo_Order_EUR_SEK__c = PL_Amount__c ,&quot;OK&quot;,&quot;NG&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount_chack</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ar__c</fullName>
        <label>Ar</label>
        <picklist>
            <picklistValues>
                <fullName>GmbH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bdg__c</fullName>
        <label>Bdg</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C_S__c</fullName>
        <label>C/S</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChC__c</fullName>
        <label>ChC</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ChC_check__c</fullName>
        <formula>if ( ChC__c =  PL_ChC__c ,&quot;OK&quot;,&quot;NG&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ChC_check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Local Order_€</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>更新区分</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>新規区分</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GP__c</fullName>
        <label>GP</label>
        <picklist>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Germany_ID__c</fullName>
        <externalId>true</externalId>
        <label>ドイツ外部ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODEL__c</fullName>
        <label>MODEL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Check__c</fullName>
        <formula>if ( MODEL__c = PL_Model__c ,&quot;OK&quot;,&quot;NG&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model_Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGANIZATION_CUSTOMER__c</fullName>
        <label>ORGANIZATION / CUSTOMER</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PL_Amount__c</fullName>
        <formula>A_Number__r.JishaPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_Bdg__c</fullName>
        <formula>A_Number__r.YosanKakudoValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL_Bdg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_ChC__c</fullName>
        <formula>A_Number__r.JuchuKakudoValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL_ChC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_Customer__c</fullName>
        <formula>A_Number__r.CustomerAccountNameFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL_Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Model__c</fullName>
        <formula>A_Number__r.Field2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL_Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_deliv__c</fullName>
        <formula>A_Number__r.ShukkaYokyuTsuki__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL_deliv</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_ord__c</fullName>
        <formula>A_Number__r.JuchuYoteiTsuki__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL_ord</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Request__c</fullName>
        <label>Packing Request</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_No__c</fullName>
        <label>Project No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP__c</fullName>
        <label>SP</label>
        <picklist>
            <picklistValues>
                <fullName>GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tokyo_Order_EUR_SEK__c</fullName>
        <label>Tokyo Order_EUR/SEK</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tokyo_Order_M_Yen__c</fullName>
        <label>Tokyo Order_M Yen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tokyo_Order_dd_mm_yyyy__c</fullName>
        <label>Tokyo Order_dd.mm.yyyy</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bgt_check__c</fullName>
        <formula>if ( Bdg__c = PL_Bdg__c ,&quot;OK&quot;,&quot;NG&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>bgt_check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_check__c</fullName>
        <formula>if ( ORGANIZATION_CUSTOMER__c = PL_Customer__c ,&quot;OK&quot;,&quot;NG&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>customer_check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dd_mm_yyyy__c</fullName>
        <label>Local Order_dd.mm.yyyy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>deliv_check__c</fullName>
        <formula>if ( Packing_Request__c =  PL_deliv__c ,&quot;OK&quot;,&quot;NG&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>deliv_check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ord_check__c</fullName>
        <formula>if ( Tokyo_Order_dd_mm_yyyy__c =  PL_ord__c ,&quot;OK&quot;,&quot;NG&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ord_check</label>
        <type>Text</type>
    </fields>
    <label>Business Activity List</label>
    <listViews>
        <fullName>A_Number</fullName>
        <columns>NAME</columns>
        <columns>Field2__c</columns>
        <columns>A_Number__c</columns>
        <columns>ORGANIZATION_CUSTOMER__c</columns>
        <columns>MODEL__c</columns>
        <columns>Bdg__c</columns>
        <columns>ChC__c</columns>
        <columns>Comment__c</columns>
        <columns>Amount_chack__c</columns>
        <columns>bgt_check__c</columns>
        <columns>ChC_check__c</columns>
        <columns>customer_check__c</columns>
        <columns>deliv_check__c</columns>
        <columns>Model_Check__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>A_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>A Number 有</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>A_Number__c</columns>
        <columns>ORGANIZATION_CUSTOMER__c</columns>
        <columns>MODEL__c</columns>
        <columns>Bdg__c</columns>
        <columns>ChC__c</columns>
        <columns>Comment__c</columns>
        <columns>Amount_chack__c</columns>
        <columns>bgt_check__c</columns>
        <columns>ChC_check__c</columns>
        <columns>customer_check__c</columns>
        <columns>deliv_check__c</columns>
        <columns>Model_Check__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Business Activity List名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>